line heigt fix on wrap

--- a/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
@@ -211,7 +211,7 @@ html[lang="ar"] {
   .container {
       padding: 0 !important;
   }
-  
+
   #top-nav-cart-img,
   .links svg {
     height: 24px;
@@ -269,6 +269,7 @@ html[lang="ar"] {
         border-bottom: 2px solid $sand-white;
         font-weight: 800;
         height: 47px;
+        line-height: 1.6;
 
         @media (min-width: 992px) and (max-width: 1280px) {
           padding: 0 1rem;
